# commodity_GPT_V2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/commodity_gpt_v2/: __main__py  config.py
src/commodity_gpt_v2/attention/: attention.py  casual_mask.py  multi_head_attention.py
src/commodity_gpt_v2/embeddings/: positional_embedding.py  token_embedding.py
src/commodity_gpt_v2/layers/: feed_forward.py  transformer_block.py  transformers_stack.py
src/commodity_gpt_v2/model/: commodity_gpt.py  gpt.py
tests/: test_Transformer_block.py  test_attention.py  test_casual_mask.py  test_embbedding.py  test_positional_embedding.py  test_script.py  test_transformer_stack.py
