[project]
name = "commodity-gpt-v2"
version = "0.1.0"
description = "Update version with new parameters"
authors = [
    {name = "wolfadvisor",email = "carlos@wolfbusinessadvisor.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.12.1,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
